controller and router

--- a/server/.env
+++ b/server/.env
@@ -1,1 +1,3 @@
 connectionString=mongodb+srv://surjithskumar23:recipe@cluster0.ov38a.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+
+jwt_secret=jwt123
