--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,8 @@
     "@angular/router": "^18.2.0",
     "@angular/ssr": "^18.2.12",
     "express": "^4.18.2",
+    "jspdf": "^2.5.2",
+    "jspdf-autotable": "^3.8.4",
     "ngx-pagination": "^6.0.3",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
